Prime/src/main/java/br/com/bi/olapql/language/query/QueryParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. QueryParser.java */
package br.com.bi.olapql.language.query;
import java.io.ByteArrayInputStream;
import java.io.InputStream;

public class QueryParser/*@bgen(jjtree)*/implements QueryParserTreeConstants, QueryParserConstants {/*@bgen(jjtree)*/
  protected JJTQueryParserState jjtree = new JJTQueryParserState();private boolean rows = false;

   private boolean columns = false;

   public static void main(String args [])
   {
      String s = "selecione [Teste] nas colunas, [Teste] nas linhas do cubo [Vendas] onde [teste] e não 1 > [teste].[teste]";
      InputStream in = new ByteArrayInputStream(s.getBytes());
      QueryParser parser = new QueryParser(in);
      try
      {
         SimpleNode node = parser.instruction();
         node.dump(" ");
      }
      catch (ParseException ex)
      {
         ex.printStackTrace();
      }
   }

   private void fixChildren(Node node)
   {
      for (int i = 0; i < node.jjtGetNumChildren(); i++)
      {
         node.jjtGetChild(i).jjtSetParent(node);
         fixChildren(node.jjtGetChild(i));
      }
   }

  final public SimpleNode instruction() throws ParseException {
 /*@bgen(jjtree) Instruction */
  Instruction jjtn000 = new Instruction(JJTINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      select();
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void select() throws ParseException {
 /*@bgen(jjtree) Select */
  Select jjtn000 = new Select(JJTSELECT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SELECT);
      axis();
      jj_consume_token(COMMA);
      axis();
      jj_consume_token(FROM);
      jj_consume_token(CUBE);
      cube();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHERE:
        jj_consume_token(WHERE);
                                                                             FilterExpression jjtn001 = new FilterExpression(JJTFILTEREXPRESSION);
                                                                             boolean jjtc001 = true;
                                                                             jjtree.openNodeScope(jjtn001);
        try {
          filterExpression();
        } catch (Throwable jjte001) {
                                                                             if (jjtc001) {
                                                                               jjtree.clearNodeScope(jjtn001);
                                                                               jjtc001 = false;
                                                                             } else {
                                                                               jjtree.popNode();
                                                                             }
                                                                             if (jjte001 instanceof RuntimeException) {
                                                                               {if (true) throw (RuntimeException)jjte001;}
                                                                             }
                                                                             if (jjte001 instanceof ParseException) {
                                                                               {if (true) throw (ParseException)jjte001;}
                                                                             }
                                                                             {if (true) throw (Error)jjte001;}
        } finally {
                                                                             if (jjtc001) {
                                                                               jjtree.closeNodeScope(jjtn001, true);
                                                                             }
        }
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(0);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void axis() throws ParseException {
 /*@bgen(jjtree) Axis */
   Axis jjtn000 = new Axis(JJTAXIS);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);java.util.List < SimpleNode > nodes = new java.util.ArrayList < SimpleNode > ();
   String axis;
    try {
      set(nodes);
      jj_consume_token(ON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ROWS:
        axis = rows();
        break;
      case COLUMNS:
        axis = columns();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      // desconsidera os children adicionados pelo jjtree através do método closeNodeScope
      jjtn000.children = null;
      for (SimpleNode node : nodes)
      {
         jjtn000.jjtAddChild(node, jjtn000.jjtGetNumChildren());
         node.jjtSetParent(jjtn000);
      }
      fixChildren(jjtn000);
      jjtn000.value = axis;
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public String rows() throws ParseException {
      if (rows) {if (true) throw new ParseException("O eixo das linhas foi duplicado");}
      else rows = true;
    jj_consume_token(ROWS);
      {if (true) return "ROWS";}
    throw new Error("Missing return statement in function");
  }

  final public String columns() throws ParseException {
      if (columns) {if (true) throw new ParseException("O eixo das colunas foi duplicado");}
      else columns = true;
    jj_consume_token(COLUMNS);
      {if (true) return "COLUMNS";}
    throw new Error("Missing return statement in function");
  }

  final public void set(java.util.List < SimpleNode > nodes) throws ParseException {
   SimpleNode node = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case METADATA_OBJECT_NAME:
      node = node();
         nodes.add(node);
      break;
    case LBRACE:
    case RBRACE:
      if (jj_2_1(3)) {
        jj_consume_token(RBRACE);
        node = node();
            nodes.add(node);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_1;
          }
          jj_consume_token(COMMA);
          set(nodes);
        }
        jj_consume_token(RBRACE);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
          jj_consume_token(LBRACE);
          set(nodes);
          jj_consume_token(RBRACE);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public SimpleNode node() throws ParseException {
   SimpleNode node;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case METADATA_OBJECT_NAME:
      node = metadataObject();
      break;
    case LPAREN:
      node = crossJoin();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode metadataObject() throws ParseException {
   SimpleNode node = null;
    if (jj_2_2(2)) {
      node = propertyNode();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case METADATA_OBJECT_NAME:
        node = levelOrMeasureOrFilter();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return node;}
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode levelOrMeasureOrFilter() throws ParseException {
 /*@bgen(jjtree) LevelOrMeasureOrFilter */
   LevelOrMeasureOrFilter jjtn000 = new LevelOrMeasureOrFilter(JJTLEVELORMEASUREORFILTER);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
      {if (true) return jjtn000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode propertyNode() throws ParseException {
 /*@bgen(jjtree) PropertyNode */
   PropertyNode jjtn000 = new PropertyNode(JJTPROPERTYNODE);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
   String property;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
      property = t.image;
      jj_consume_token(DOT);
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      property += "." + t.image;
      jjtn000.value = property;
      {if (true) return jjtn000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode crossJoin() throws ParseException {
   SimpleNode firstArgument;
   java.util.List < SimpleNode > secondArgument = new java.util.ArrayList < SimpleNode > ();
    jj_consume_token(LPAREN);
    firstArgument = metadataObject();
    jj_consume_token(COMMA);
    set(secondArgument);
    jj_consume_token(RPAREN);
      for (SimpleNode node : secondArgument)
      {
         firstArgument.jjtAddChild(node, firstArgument.jjtGetNumChildren());
         node.jjtSetParent(firstArgument);
      }
      {if (true) return firstArgument;}
    throw new Error("Missing return statement in function");
  }

/* ************************ */
/* ******* METADATA ******* */
/* ************************ */
  final public void level() throws ParseException {
 /*@bgen(jjtree) Level */
   Level jjtn000 = new Level(JJTLEVEL);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void filter() throws ParseException {
 /*@bgen(jjtree) Filter */
   Filter jjtn000 = new Filter(JJTFILTER);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public SimpleNode property() throws ParseException {
 /*@bgen(jjtree) Property */
   Property jjtn000 = new Property(JJTPROPERTY);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
   String property;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
      property = t.image;
      jj_consume_token(DOT);
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      property += "." + t.image;
      jjtn000.value = property;
      {if (true) return jjtn000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void cube() throws ParseException {
 /*@bgen(jjtree) Cube */
   Cube jjtn000 = new Cube(JJTCUBE);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(METADATA_OBJECT_NAME);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
      jjtn000.value = t.image;
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

/* ********************** */
/* ******* FILTER ******* */
/* ********************** */
  final public void filterExpression() throws ParseException {
    orCondition();
  }

  final public void orCondition() throws ParseException {
 /*@bgen(jjtree) #OrCondition(> 1) */
  OrCondition jjtn000 = new OrCondition(JJTORCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      andCondition();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
        jj_consume_token(OR);
        andCondition();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
     }
    }
  }

  final public void andCondition() throws ParseException {
 /*@bgen(jjtree) #AndCondition(> 1) */
  AndCondition jjtn000 = new AndCondition(JJTANDCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      condition();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(AND);
        condition();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
     }
    }
  }

  final public void condition() throws ParseException {
 /*@bgen(jjtree) #Condition(> 1) */
  Condition jjtn000 = new Condition(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        negation();
        break;
      case MINUS:
      case DATE:
      case METADATA_OBJECT_NAME:
      case FLOATING_POINT_LITERAL:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
        if (jj_2_3(2)) {
          operand();
          conditionRightHandSide();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case METADATA_OBJECT_NAME:
            filter();
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        filterExpression();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
     }
    }
  }

  final public void negation() throws ParseException {
 /*@bgen(jjtree) Negation */
  Negation jjtn000 = new Negation(JJTNEGATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NOT);
      condition();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void operand() throws ParseException {
    summand();
  }

  final public void conditionRightHandSide() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RELATIONAL_OPERATOR:
      compare();
      operand();
      break;
    case IN:
      inExpression();
      break;
    case LIKE:
      likeExpression();
      break;
    case STARTS_WITH:
      startsWithExpression();
      break;
    case ENDS_WITH:
      endsWithExpression();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void inExpression() throws ParseException {
 /*@bgen(jjtree) InExpression */
  InExpression jjtn000 = new InExpression(JJTINEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IN);
      jj_consume_token(LPAREN);
      value();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        value();
      }
      jj_consume_token(RPAREN);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void likeExpression() throws ParseException {
 /*@bgen(jjtree) LikeExpression */
  LikeExpression jjtn000 = new LikeExpression(JJTLIKEEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LIKE);
      operand();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void startsWithExpression() throws ParseException {
 /*@bgen(jjtree) StartsWithExpression */
  StartsWithExpression jjtn000 = new StartsWithExpression(JJTSTARTSWITHEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STARTS_WITH);
      operand();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void endsWithExpression() throws ParseException {
 /*@bgen(jjtree) EndsWithExpression */
  EndsWithExpression jjtn000 = new EndsWithExpression(JJTENDSWITHEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ENDS_WITH);
      operand();
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }
